# lissajous

./: CMakeLists.txt  README.md  cvideo.c  cvideo.pio  life.h  multuminparvo.h
